package jp.co.sample.kintai.attendance.domain;

import java.time.Duration;
import java.time.LocalDate;
import java.util.List;
import java.util.function.Predicate;

import jp.co.sample.kintai.shared.domain.PremiumType;
import jp.co.sample.kintai.shared.domain.TimeRange;
import jp.co.sample.kintai.workrule.domain.DayType;
import jp.co.sample.kintai.workrule.domain.WorkingTimeSystemType;

/**
 * 1 日分の集計結果。
 *
 * <p>集計値だけでなく内訳（{@code slices}）も保持する。
 * 労務の問い合わせでは「なぜこの残業時間なのか」の提示が必須であり、
 * 集計値だけでは答えられないため。
 *
 * @param workDate            勤務日。労働時間の帰属先（BR-03）
 * @param dayType             勤務日の暦日区分。<strong>表示用。内訳の根拠にはしない</strong>
 * @param workingTimeSystem   労働時間制度の判別値
 * @param slices              内訳
 * @param workingTime         実労働時間
 * @param breakTime           休憩時間
 * @param baseTime            どの排他区分も付かない時間。FIXED は所定内、FLEX は月次へ委ねる分
 * @param overtimeWithinStatutoryTime 法定内残業
 * @param overtimeBeyondStatutoryTime 法定外残業
 * @param nightTime           深夜。<strong>他の区分と重なる。合計には数えない</strong>
 * @param legalHolidayTime    法定休日労働
 */
public record DailyAttendance(LocalDate workDate, DayType dayType,
                              WorkingTimeSystemType workingTimeSystem,
                              List<WorkSlice> slices,
                              Duration workingTime, Duration breakTime,
                              Duration baseTime,
                              Duration overtimeWithinStatutoryTime,
                              Duration overtimeBeyondStatutoryTime,
                              Duration nightTime, Duration legalHolidayTime) {

    public DailyAttendance {
        if (workDate == null || dayType == null || workingTimeSystem == null || slices == null) {
            throw new IllegalArgumentException("日次勤怠の項目に null は許されません");
        }
        // Duration も検査する。落とすと「内訳の合計が一致しない」という
        // 別の例外に化けたり、意味の伝わらない NPE になる
        requireNonNull(workingTime, "実労働時間");
        requireNonNull(breakTime, "休憩時間");
        requireNonNull(baseTime, "基本時間");
        requireNonNull(overtimeWithinStatutoryTime, "法定内残業");
        requireNonNull(overtimeBeyondStatutoryTime, "法定外残業");
        requireNonNull(nightTime, "深夜労働時間");
        requireNonNull(legalHolidayTime, "法定休日労働時間");
        slices = List.copyOf(slices);

        // ★ 休憩が負になるのは、実労働区間が重なっている証拠である
        if (breakTime.isNegative()) {
            throw new IllegalArgumentException(
                    "休憩時間が負になっています（実労働区間が重なっている可能性）: " + breakTime);
        }

        // ★ 排他的な 4 区分の合計は必ず実労働時間に一致する。深夜は重ね掛けなので含めない
        Duration breakdown = baseTime
                .plus(overtimeWithinStatutoryTime)
                .plus(overtimeBeyondStatutoryTime)
                .plus(legalHolidayTime);
        if (!breakdown.equals(workingTime)) {
            throw new IllegalArgumentException(
                    "内訳の合計が実労働時間と一致しません: 内訳 %s / 実労働 %s"
                            .formatted(breakdown, workingTime));
        }

        // ★ 内訳の区間は時系列順に並び、互いに重ならない
        requireDisjointAndOrdered(slices);

        // ★ 集計値は内訳から再集計した値と一致しなければならない
        Duration slicedWorking = total(slices, slice -> true);
        if (!slicedWorking.equals(workingTime)) {
            throw new IllegalArgumentException(
                    "内訳（slices）の合計が実労働時間と一致しません: 内訳 %s / 実労働 %s"
                            .formatted(slicedWorking, workingTime));
        }
        requireMatches(slices, PremiumType.NIGHT, nightTime, "深夜");
        requireMatches(slices, PremiumType.LEGAL_HOLIDAY, legalHolidayTime, "法定休日労働");
        requireMatches(slices, PremiumType.OVERTIME_WITHIN_STATUTORY,
                overtimeWithinStatutoryTime, "法定内残業");
        requireMatches(slices, PremiumType.OVERTIME_BEYOND_STATUTORY,
                overtimeBeyondStatutoryTime, "法定外残業");

        // ★ フレックスは日次で残業を判定しない（BR-05）
        if (workingTimeSystem == WorkingTimeSystemType.FLEX
                && !(overtimeWithinStatutoryTime.isZero()
                        && overtimeBeyondStatutoryTime.isZero())) {
            throw new IllegalArgumentException(
                    "フレックスに日次の残業を計上しています: 法定内 %s / 法定外 %s"
                            .formatted(overtimeWithinStatutoryTime,
                                    overtimeBeyondStatutoryTime));
        }

        // 「深夜 ≤ 実労働」は上の 2 つから導ける。深夜は slices のうち NIGHT が付いたものの
        // 合計に等しく（requireMatches）、実労働は slices 全体の合計に等しい（slicedWorking）。
        // 独立した検査として書くと、成立しない条件を検査することになる
        // （CLAUDE.md 落とし穴 16）。ここに足さない。
    }

    /**
     * 内訳の区間が時系列順で、互いに重ならないことを確かめる。
     *
     * <p><strong>合計の一致だけでは重なりを検出できない。</strong>
     * {@code 09:00–12:00} と {@code 11:00–14:00} の 2 区間は合計 6 時間になるので、
     * 実労働 6 時間として矛盾なく構築できてしまう。実際の拘束は 5 時間なので、
     * 1 時間が二重に計上されている（CLAUDE.md 落とし穴 32）。
     *
     * <p>計算経路では「休憩が負」で気づけるが、それは計算機が求めた拘束時間に依存する。
     * DB から復元する経路では効かないので、<strong>この型自身で閉じる。</strong>
     *
     * <p>この検査は合計の一致からは導けないので恒真ではない（落とし穴 36）。
     */
    private static void requireDisjointAndOrdered(List<WorkSlice> slices) {
        for (int i = 1; i < slices.size(); i++) {
            TimeRange previous = slices.get(i - 1).range();
            TimeRange current = slices.get(i).range();
            if (current.start().isBefore(previous.end())) {
                throw new IllegalArgumentException(
                        "内訳の区間が時系列順に並んでいないか、重なっています: %s のあとに %s"
                                .formatted(previous, current));
            }
        }
    }

    private static void requireNonNull(Duration value, String label) {
        if (value == null) {
            throw new IllegalArgumentException("%sに null は許されません".formatted(label));
        }
    }

    private static void requireMatches(List<WorkSlice> slices, PremiumType premium,
                                       Duration expected, String label) {
        Duration actual = total(slices, slice -> slice.has(premium));
        if (!actual.equals(expected)) {
            throw new IllegalArgumentException(
                    "%sの集計値が内訳と一致しません: 集計 %s / 内訳 %s"
                            .formatted(label, expected, actual));
        }
    }

    private static Duration total(List<WorkSlice> slices, Predicate<WorkSlice> filter) {
        return slices.stream().filter(filter)
                .map(WorkSlice::duration)
                .reduce(Duration.ZERO, Duration::plus);
    }

    /** 労基法 34 条の休憩を満たしているか（BR-08）。不足しても計算は変えない。 */
    public boolean breakRequirementSatisfied() {
        return new BreakTimeRequirement(workingTime, breakTime).isSatisfied();
    }

    /** 打刻が無い日（欠勤・休日）。 */
    public static DailyAttendance absent(LocalDate workDate, DayType dayType,
                                         WorkingTimeSystemType system) {
        return new DailyAttendance(workDate, dayType, system, List.of(),
                Duration.ZERO, Duration.ZERO, Duration.ZERO,
                Duration.ZERO, Duration.ZERO, Duration.ZERO, Duration.ZERO);
    }
}
